# vibe

./: .env.example  .gitignore  .vercelignore  LICENSE  README.md  RUNBOOK.md  pyproject.toml  requirements.txt  vercel.json
config/: advisory.yaml  auto.yaml  default.yaml  live.yaml
docs/: markets_roadmap.md  research.md  windows-server.md
scripts/: backtest.py  btts_ab.py  eval_derived_markets.py  eval_market_pool.py  eval_strategy_filters.py  fit_backbone.py  fit_xg_proxy.py  publish_live.ps1  publish_live.sh  recorder_status.sh  run.py
src/wc_kalshi/: __init__.py  cli.py  config.py  eventbus.py  fees.py  logging_setup.py  util.py
tests/: conftest.py  test_advisory.py  test_alerts.py  test_backbone_invariants.py  test_backtest.py  test_betfair.py  test_btts_ab.py  test_budget.py  test_calibration_infra.py  test_calibration_per_outcome.py  test_config.py  test_dashboard.py  test_db.py  test_derived.py  test_edge.py  test_executor.py  test_export.py  test_extra_markets.py  test_fees.py  test_first_to_score.py  test_fit.py  test_fit_backbone_gate.py  test_guardrails.py  test_half_markets.py  test_historical.py  test_http.py  test_implied.py  test_inplay_model.py  test_intensity.py  test_joint_sizing.py  test_kalshi_auth.py  test_kalshi_exec.py  test_kalshi_live_format.py  test_knockout.py  test_lifecycle.py  test_manifest_golden.py  test_market_pool.py  test_metric_namespaces.py  test_poisson.py  test_portfolio.py  (+13 more)
tests/data/: apifootball_fixture.json  betfair_stream_sample.ndjson  historical_match.json  kalshi_events.json  statsbomb_events_sample.json  statsbomb_match_meta.json
web/: .gitignore  next.config.mjs  package-lock.json  package.json
web/app/: error.tsx  globals.css  layout.tsx  (+1 more)
(+149 files in other folders)
