[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldcup-kalshi-edge"
version = "0.1.0"
description = "In-play 2026 FIFA World Cup probability model + Kalshi edge detection and (simulated-by-default) execution."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Quant Desk" }]

# Core runtime stays deliberately lean so the whole pipeline (model, edge, sizing,
# guardrails, execution, dashboard) runs and is tested on numpy + stdlib only.
# Heavy analytics libs are optional extras (see [project.optional-dependencies]).
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.1",
  "httpx>=0.27",
  "websockets>=12.0",
  "tenacity>=8.2",
  "cryptography>=42.0",
  "SQLAlchemy>=2.0",
  "PyYAML>=6.0",
  "numpy>=1.26",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Optional, heavier analytics: used by the backtest report + calibration plots.
analysis = ["pandas>=2.1", "scipy>=1.11", "scikit-learn>=1.4", "matplotlib>=3.8"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "ruff>=0.4", "mypy>=1.9"]

[project.scripts]
wck = "wc_kalshi.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wc_kalshi = ["dashboard/static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
